syntax = "proto3";

option go_package = "./service/pb";

import "file_message.proto";

message ApplyPatchRequest {
    repeated string remote_apps = 1;
}

message ApplyPatchResponse {
    string remote_app = 1;
    bool verified = 2; 
    repeated FILE data = 3;
}

