syntax = "proto3";

option go_package = "./service/pb";

import "file_message.proto";

message UploadFileRequest {
    oneof data {
        FileInfo info = 1;
        bytes chunk_data = 2;
    };
  }
  
message FileInfo {
    string file_name = 1;
    string file_type = 2;
}
  
message UploadFileResponse {
    string name = 1;
    uint64 size = 2;
    repeated FILE data = 3;
}
