syntax = "proto3";

option go_package = "./service/pb";

import "file_message.proto";

message VerifyPatchRequest {
    repeated string remote_apps = 1;
}

message VerifyPatchResponse {
    string remote_app = 1;
    bool verified = 2; 
    repeated FILE data = 3;
}

